# ppm

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac  meson.build  setup.cfg
data/: Makefile.am  meson.build  org.gnome.PrepaidManager.appdata.xml.in  org.gnome.PrepaidManager.desktop.in  org.gnome.PrepaidManager.gschema.xml  org.gnome.PrepaidManager.gschema.xml.in.in  ppm.gresources.xml  prepaid-manager-applet.appdata.xml.in  prepaid-manager-applet.desktop.in
data/icons/: Makefile.am
data/icons/128x128/: Makefile.am
data/icons/32x32/: Makefile.am
data/icons/48x48/: Makefile.am
data/icons/64x64/: Makefile.am
data/icons/scalable/: Makefile.am
data/ui/: ppm-error-dialog.ui  ppm-provider-assistant.ui  ppm.ui
debian/: changelog  control  copyright  gbp.conf  rules
debian/patches/: Also-use-python3-when-not-running-via-wrapper.patch  series
po/: POTFILES.in  de.po  meson.build
src/: .gitignore  Makefile.am  meson.build  ppm-modem-request.ui  ppm-provider-assistant.ui  ppm.ui  prepaid-manager-applet.desktop.in  prepaid-manager-applet.in  prepaid-manager-applet.py
src/ppm/: Makefile.am  __init__.py.in  accountdb.py  meson.build  modemproxy.py  provider.py  providerdb.py
